--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,12 @@
 			<version>6.0.53</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>dynamodb-enhanced</artifactId>
+			<version>2.16.104</version>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
